--- a/Storage-main/IceStore/trashbin.html
+++ b/Storage-main/IceStore/trashbin.html
@@ -115,6 +115,7 @@
 
     .sidebar-progress-fill {
       height: 100%;
+      width: 0%;
       background: linear-gradient(90deg, #00BFFF, #4DEEE8);
       border-radius: 3px;
       transition: width 0.5s ease;
